Update app version to 2.0.0 and configure release APK naming

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "uk.me.hardill.weblauncher"
         minSdkVersion 21
         targetSdkVersion 35
-        versionCode 16
-        versionName '1.3.2'
+        versionCode 17
+        versionName '2.0.0'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     signingConfigs {
@@ -23,6 +23,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
+        }
+    }
+    applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "WebLauncher-${variant.versionName}.apk"
         }
     }
     compileOptions {
